# Stock-prices-api

./: .gitignore  fetch_data.py  polygon_validation.py  pyproject.toml  transform_data.py
.github/workflows/: deploy-backend.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
dashboard/: index.html  package.json  vite.config.js
dashboard/src/: App.css  App.jsx  PredictionCard.jsx  TickerModal.jsx
stock-prices-api/: .dockerignore  .gitignore  Dockerfile  Dockerfile.scheduler  api.py  cloudbuild-scheduler.yaml  feature_engineering.py  fetch_data.py  fetch_news.py  langchain_researcher.py  live_prices.py  load_chroma.py  main.py  pyproject.toml  researcher.py  stock_price_model.pkl  test_api.py  test_chroma.py  test_news.py  test_ws_client.py  train_model.py  transform_data.py  uk_data_fetch.py
stock-prices-api/exploration/: live_prices.py
stock-prices-api/exploration/mlflow/: mlflow.db
stock-prices-api/exploration/mlflow/mlruns/1/models/m-8a83951886254953a5b1aebd0c10d3ea/artifacts/: MLmodel  conda.yaml  model.ubj  python_env.yaml
stock-prices-api/exploration/validation/: energy_validation.py  polygon_validation_2.py  polygon_validation_3.py
stock-prices-api/mlruns/1/models/m-8a83951886254953a5b1aebd0c10d3ea/artifacts/: requirements.txt
stock-prices-api/stockflow-ui/: .firebaserc  index.html  package.json
stock-prices-api/stockflow-ui/.firebase/: hosting.RElTVA.cache
stock-prices-api/stockflow-ui/src/: App.jsx
