[project]
name = "stock-prices-api"
version = "0.1.0"
description = ""
authors = [
    {name = "AvJo1421",email = "avjo2000@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "yfinance (>=1.4.1,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
