[project]
name = "stock-prices-api"
version = "0.1.0"
description = ""
authors = [
    {name = "AvJo1421",email = "avjo2000@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "yfinance (>=1.4.1,<2.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "massive (>=2.8.0,<3.0.0)",
    "websockets (>=14,<16)",
    "websocket-client (>=1.9.0,<2.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "tzdata (>=2026.2,<2027.0)",
    "mlflow (>=3.13.0,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "xgboost (>=2.0.0,<3.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "langgraph (>=1.2.4,<2.0.0)",
    "langchain (>=1.3.8,<2.0.0)",
    "langchain-anthropic (>=1.4.5,<2.0.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "protobuf (<4.0.0)",
    "speechrecognition (>=3.16.1,<4.0.0)",
    "pyttsx3 (>=2.99,<3.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "langchain-experimental (>=0.4.2,<0.5.0)",
    "tabulate (>=0.10.0,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
